# maui-shelf

./: CMakeLists.txt  README.md  org.kde.shelf.metainfo.xml
src/: CMakeLists.txt  lib_assets.qrc  library.cpp  library.h  main.cpp  main.qml
src/models/: readingprogress.cpp  readingprogress.h
src/views/: SettingsDialog.qml  ShortcutsDialog.qml
src/views/Viewer/: PDFViewer.qml  Viewer.qml  Viewer_PDF.qml
src/views/viewer/: ComicViewer.qml  DocumentViewer.qml  EpubViewer.qml  PdfViewer.qml  PdfViewerContent.qml  TextViewer.qml
